Handle top safe area and balance the hero tagline wrapping https://bugs.webkit.org/show_bug.cgi?id=293627
Reviewed by Richard Robinson.

Canonical link: https://commits.webkit.org/295510@main

--- a/Websites/webkit.org/wp-content/themes/webkit/style.css
+++ b/Websites/webkit.org/wp-content/themes/webkit/style.css
@@ -2764,6 +2764,11 @@ header .search-input:not([value=""]) {
 }
 
 @media only screen and (max-width: 415px) {
+    header,
+    .home header {
+        padding-top: env(safe-area-inset-top);
+    }
+
     .nextrouter-copy {
         font-size: 1.7rem;
         letter-spacing: -0.016rem;
